// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`neh should handle "1%20+%201" "%20"-spaced query correctly 1`] = `
Response {
  "body": null,
  "bodyUsed": false,
  "headers": Headers {
    "_map": Map {
      "location" => "https://duckduckgo.com/?q=1+%2B+1",
    },
  },
  "method": "GET",
  "ok": false,
  "redirected": false,
  "status": 302,
  "statusText": "OK",
  "type": "basic",
  "url": "http://example.com/asset",
}
`;

exports[`neh should handle "1+%2B+1" "+"-spaced query correctly 1`] = `
Response {
  "body": null,
  "bodyUsed": false,
  "headers": Headers {
    "_map": Map {
      "location" => "https://duckduckgo.com/?q=1+%2B+1",
    },
  },
  "method": "GET",
  "ok": false,
  "redirected": false,
  "status": 302,
  "statusText": "OK",
  "type": "basic",
  "url": "http://example.com/asset",
}
`;

exports[`neh should handle "drive" "%20"-spaced query correctly 1`] = `
Response {
  "body": null,
  "bodyUsed": false,
  "headers": Headers {
    "_map": Map {
      "location" => "https://drive.google.com",
    },
  },
  "method": "GET",
  "ok": false,
  "redirected": false,
  "status": 302,
  "statusText": "OK",
  "type": "basic",
  "url": "http://example.com/asset",
}
`;

exports[`neh should handle "drive" "+"-spaced query correctly 1`] = `
Response {
  "body": null,
  "bodyUsed": false,
  "headers": Headers {
    "_map": Map {
      "location" => "https://drive.google.com",
    },
  },
  "method": "GET",
  "ok": false,
  "redirected": false,
  "status": 302,
  "statusText": "OK",
  "type": "basic",
  "url": "http://example.com/asset",
}
`;

exports[`neh should handle "drive%202" "%20"-spaced query correctly 1`] = `
Response {
  "body": null,
  "bodyUsed": false,
  "headers": Headers {
    "_map": Map {
      "location" => "https://drive.google.com/drive/u/2/",
    },
  },
  "method": "GET",
  "ok": false,
  "redirected": false,
  "status": 302,
  "statusText": "OK",
  "type": "basic",
  "url": "http://example.com/asset",
}
`;

exports[`neh should handle "drive+2" "+"-spaced query correctly 1`] = `
Response {
  "body": null,
  "bodyUsed": false,
  "headers": Headers {
    "_map": Map {
      "location" => "https://drive.google.com/drive/u/2/",
    },
  },
  "method": "GET",
  "ok": false,
  "redirected": false,
  "status": 302,
  "statusText": "OK",
  "type": "basic",
  "url": "http://example.com/asset",
}
`;

exports[`neh should handle "ip" "%20"-spaced query correctly 1`] = `
Response {
  "body": null,
  "bodyUsed": false,
  "headers": Headers {
    "_map": Map {
      "location" => "https://icanhazip.com",
    },
  },
  "method": "GET",
  "ok": false,
  "redirected": false,
  "status": 302,
  "statusText": "OK",
  "type": "basic",
  "url": "http://example.com/asset",
}
`;

exports[`neh should handle "ip" "+"-spaced query correctly 1`] = `
Response {
  "body": null,
  "bodyUsed": false,
  "headers": Headers {
    "_map": Map {
      "location" => "https://icanhazip.com",
    },
  },
  "method": "GET",
  "ok": false,
  "redirected": false,
  "status": 302,
  "statusText": "OK",
  "type": "basic",
  "url": "http://example.com/asset",
}
`;

exports[`neh should handle "lyrics%20here's%20to%20never%20growing%20up" "%20"-spaced query correctly 1`] = `
Response {
  "body": null,
  "bodyUsed": false,
  "headers": Headers {
    "_map": Map {
      "location" => "https://duckduckgo.com/?q=%5Csite:genius.com%20here's%20to%20never%20growing%20up",
    },
  },
  "method": "GET",
  "ok": false,
  "redirected": false,
  "status": 302,
  "statusText": "OK",
  "type": "basic",
  "url": "http://example.com/asset",
}
`;

exports[`neh should handle "lyrics+here's+to+never+growing+up" "+"-spaced query correctly 1`] = `
Response {
  "body": null,
  "bodyUsed": false,
  "headers": Headers {
    "_map": Map {
      "location" => "https://duckduckgo.com/?q=%5Csite:genius.com%20here's%20to%20never%20growing%20up",
    },
  },
  "method": "GET",
  "ok": false,
  "redirected": false,
  "status": 302,
  "statusText": "OK",
  "type": "basic",
  "url": "http://example.com/asset",
}
`;

exports[`neh should handle "npm%20p%20@babel/core" "%20"-spaced query correctly 1`] = `
Response {
  "body": null,
  "bodyUsed": false,
  "headers": Headers {
    "_map": Map {
      "location" => "https://www.npmjs.com/package/@babel/core",
    },
  },
  "method": "GET",
  "ok": false,
  "redirected": false,
  "status": 302,
  "statusText": "OK",
  "type": "basic",
  "url": "http://example.com/asset",
}
`;

exports[`neh should handle "npm+p+@babel/core" "+"-spaced query correctly 1`] = `
Response {
  "body": null,
  "bodyUsed": false,
  "headers": Headers {
    "_map": Map {
      "location" => "https://www.npmjs.com/package/@babel/core",
    },
  },
  "method": "GET",
  "ok": false,
  "redirected": false,
  "status": 302,
  "statusText": "OK",
  "type": "basic",
  "url": "http://example.com/asset",
}
`;

exports[`neh should handle "search%20query" "%20"-spaced query correctly 1`] = `
Response {
  "body": null,
  "bodyUsed": false,
  "headers": Headers {
    "_map": Map {
      "location" => "https://duckduckgo.com/?q=search+query",
    },
  },
  "method": "GET",
  "ok": false,
  "redirected": false,
  "status": 302,
  "statusText": "OK",
  "type": "basic",
  "url": "http://example.com/asset",
}
`;

exports[`neh should handle "search+query" "+"-spaced query correctly 1`] = `
Response {
  "body": null,
  "bodyUsed": false,
  "headers": Headers {
    "_map": Map {
      "location" => "https://duckduckgo.com/?q=search+query",
    },
  },
  "method": "GET",
  "ok": false,
  "redirected": false,
  "status": 302,
  "statusText": "OK",
  "type": "basic",
  "url": "http://example.com/asset",
}
`;

exports[`neh should handle "trzh%20hong%20kong" "%20"-spaced query correctly 1`] = `
Response {
  "body": null,
  "bodyUsed": false,
  "headers": Headers {
    "_map": Map {
      "location" => "https://fanyi.baidu.com/#en/zh/hong%20kong",
    },
  },
  "method": "GET",
  "ok": false,
  "redirected": false,
  "status": 302,
  "statusText": "OK",
  "type": "basic",
  "url": "http://example.com/asset",
}
`;

exports[`neh should handle "trzh+hong+kong" "+"-spaced query correctly 1`] = `
Response {
  "body": null,
  "bodyUsed": false,
  "headers": Headers {
    "_map": Map {
      "location" => "https://fanyi.baidu.com/#en/zh/hong%20kong",
    },
  },
  "method": "GET",
  "ok": false,
  "redirected": false,
  "status": 302,
  "statusText": "OK",
  "type": "basic",
  "url": "http://example.com/asset",
}
`;
